# mEngine

./: .clangd  .gitignore  README.md
benchmarks/: README.md
cpp/: CMakeLists.txt
cpp/cmake/templates/: version.h
cpp/cmake/utils/: proto.cmake  utils.cmake
cpp/include/m_engine/: util.h
cpp/include/m_engine/batch_manager/: runtimeBuffers.h
cpp/include/m_engine/common/: arrayView.h  assert.h  cudaFp8Utils.h  cudaUtils.h  dataType.h  logger.h  mEngineException.h  stringUtils.h
cpp/include/m_engine/executor/: executor.h  serialization.h  tensor.h  types.h
cpp/include/m_engine/runtime/: bufferManager.h  common.h  cudaEvent.h  cudaMemPool.cpp  cudaMemPool.h  cudaStream.h  iBuffer.h  iTensor.h  memoryCounters.h  modelConfig.h  virtualMemory.h
cpp/include/m_engine/runtime/utils/: debugUtils.h
cpp/include/tensorrt_llm/executor/: version.h
cpp/m_engine/: CMakeLists.txt
cpp/m_engine/common/: CMakeLists.txt  assert.cpp  cudaBf16Fallbacks.cuh  cudaDriverWrapper.cpp  cudaDriverWrapper.h  cudaTypeUtils.cuh  hashUtils.h  logger.cpp  mEngineException.cpp  memoryUtils.cu  memoryUtils.h  mmapReader.cpp  mmapReader.h  nvtxUtils.h  safetensors.cpp  safetensors.h  stringUtils.cpp
cpp/m_engine/executor/: CMakeLists.txt  executor.cpp  executorImpl.h  model.h  serialization.cpp  tensor.cpp  trt_bindings.cpp  trt_bindings.h  trt_logger.cpp  trt_logger.h
cpp/m_engine/runtime/: CMakeLists.txt  EngineRunner.cpp  EngineRunner.h  bufferManager.cpp  bufferView.h  cudaMemPool.cpp  cudaMemPool.h  iBuffer.cpp  iTensor.cpp  mEngineBuffers.cpp  mEngineBuffers.h  mEngineRuntime.h  mEngineStreamReaders.cpp  memoryCounters.cpp  tensorView.h  virtualMemory.cpp
cpp/m_engine/runtime/utils/: debugUtils.cu  numpyUtils.cpp  numpyUtils.h  runtimeUtils.cpp  runtimeUtils.h
cpp/protos/: CMakeLists.txt  cuda_buffer_config.proto  trt_engine.proto  trt_io.proto
cpp/tests/: CMakeLists.txt
cpp/tests/e2e_tests/: CMakeLists.txt
cpp/tests/e2e_tests/executor/: CMakeLists.txt  executorTest.cpp  executorTest.h
cpp/tests/resources/data/yolo/: output0.npy  output1.npy
cpp/tests/resources/models/: model.engine
cpp/tests/resources/models/engine/x86/: yolo_5_class_full_dataset.251209_simplifier.engine
cpp/tests/unit_tests/: CMakeLists.txt
cpp/tests/unit_tests/executor/: CMakeLists.txt  tensorTest.cpp
cpp/tests/unit_tests/runtime/: CMakeLists.txt  bufferManagerTest.cpp  mEngineBuffersTest.cpp
cpp/tests/utils/: CMakeLists.txt  common.cpp  common.h
m_engine/: version.py
m_engine/model_executor/: custom_op.py
